Added Rexster extensions for pushing and retrieving events to/from the event stack.  Added UI for accessing the get-events service.